# SKPokerEval

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Constants.h  FiveEval.cpp  FiveEval.h  LICENSE.md  README.md  SevenEval.cpp  SevenEval.h  build.sh
.github/workflows/: continuous-integration.yml
C++/: Constants.h  FiveEval.cpp  FiveEval.h  HandEval.cpp  HandEval.h  SevenEval.cpp  SevenEval.h  main.cpp
Java/src/com/SpecialK/SpecialKEval/: Constants.java  FiveEval.java  HandEval.java  SevenEval.java  test.java
Objective C/: GPLv3LICENSE.rtf
Objective C/SpecialKEval/SpecialKEval/: AppDelegate.h  FiveEval.h  FiveEval.m  HandEval.h  HandEval.m  SevenEval.m  SpecialKEval-Info.plist  SpecialKEval-Prefix.pch  main.m
Objective C/SpecialKEval/SpecialKEval.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Objective C/SpecialKEval/SpecialKEval.xcodeproj/xcuserdata/Ken.xcuserdatad/xcschemes/: xcschememanagement.plist
Objective-C/: Doxyfile  FiveEval.h  FiveEval.m  HandEval.h  HandEval.m  SevenEval.h  SevenEval.m  SpecialKEval_Prefix.pch
Objective-C/SpecialKEval/SpecialKEval/: AppDelegate.m  SevenEval.h  SpecialKEval-Prefix.pch
Objective-C/SpecialKEval/SpecialKEval.xcodeproj/: project.pbxproj
Objective-C/SpecialKEval/SpecialKEval/en.lproj/: MainMenu.xib
Objective-C/SpecialKEval/SpecialKEvalTests/: HandEvalUnitTest.txt  SpecialKEvalTests-Info.plist  SpecialKEvalTests.h  SpecialKEvalTests.m
Python/: Constants.py  FiveEval.py  SevenEval.py
Scripts/: GeneralUnits.cpp  KeyTest.cpp
docs/: _five_eval_8h.html  _five_eval_8h_source.html  _five_eval_8m.html  _seven_eval_8h.html  _seven_eval_8h_source.html  _seven_eval_8m.html  annotated.html  class_five_eval-members.html  class_seven_eval-members.html  classes.html  files.html  functions.html  functions_func.html  index.html  interface_five_eval.html  interface_seven_eval.html
docs/search/: all_66.html  all_73.html  classes_66.html  classes_73.html  files_66.html  files_73.html  functions_67.html  functions_72.html  functions_74.html  search.js
lib/gtest-1.7.0/: CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: __init__.py  generate_rank_tables.py  perfect_hash.py  rank.py  search_optimal_chm.py  seven_key_gen.py
src/: CMakeLists.txt  Constants.h  Deckcards.h  FiveEval.cpp  FiveEval.h  FlushCheck.h  FlushRanks.h  Profiler.cpp  RankHash.h  RankOffsets.h  SKConfig.h  SKConfig.h.in  SevenEval.cpp  SevenEval.h
tests/: FiveEval.cpp  FiveEval.h  Parallel.h  five_eval_tests.cpp  seven_eval_tests.cpp
(+2 files in other folders)
